--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Ctower</title>
-  <%= stylesheet_link_tag    "application" %>
+  <title>CTower</title>
+  <%= stylesheet_link_tag    "basic" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+	<div id="header">
+		<%=image_tag('radar.jpg', :class=> 'logo_image')%><p class="header_text"> CTower </p>
+		<p class="navig_text"><%=link_to "Home", start_index_path%></p>
+		<p class="navig_space">|</p>
+		<p class="navig_text"><%=link_to "The CTower Approach", start_approach_path%></p>
+		<p class="navig_space">|</p>
+		<p class="navig_text"><%=link_to "Case Studies", start_caseStudies_path%></p>
+		
+	
+		
+	</div>	
+	<div id="contents">
+		<%= yield %>
+	</div>
 </body>
 </html>
