updated with blogs

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,11 @@
 		<p class="navig_text"><%=link_to "Home", start_index_path%></p>
 		<p class="navig_space">|</p>
 		<p class="navig_text"><%=link_to "The CTower Approach", start_approach_path%></p>
-		<p class="navig_space">|</p>
-		<p class="navig_text"><%=link_to "Case Studies", start_caseStudies_path%></p>
+      <p class="navig_space">|</p>
+          <p class="navig_text"><%=link_to "Case Studies", start_caseStudies_path%></p>
+      <p class="navig_space">|</p>
+          <p class="navig_text"><%=link_to "Blog", blogs_path%></p>
+
 		
 	
 		
