A bunch of new models

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,8 @@
           <p class="navig_text"><%=link_to "Case Studies", start_caseStudies_path%></p>
       <p class="navig_space">|</p>
           <p class="navig_text"><%=link_to "Blog", blogs_path%></p>
+      <p class="navig_space">|</p>
+          <p class="navig_text"><%=link_to "Portfolio", portfolios_path%></p>
 
 		
 	
