--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,9 @@
       <p class="navig_space">|</p>
           <p class="navig_text"><%=link_to "Blog", blogs_path%></p>
       <p class="navig_space">|</p>
-          <p class="navig_text"><%=link_to "Portfolio", portfolios_path%></p>
+                <p class="navig_text"><%=link_to "Portfolio", portfolios_path%></p>
+      <p class="navig_space">|</p>
+                <p class="navig_text"><%=link_to "initiatives", initiatives_path%></p>
 
 		
 	
