--- a/app/views/initiatives/_form.html.erb
+++ b/app/views/initiatives/_form.html.erb
@@ -19,6 +19,14 @@
     <%= f.label :description %><br />
     <%= f.text_area :description %>
   </div>
+
+    <div class="field">
+      <%= f.label :portfolio %><br />
+
+      <%= f. %>
+    </div>
+
+
   <div class="field">
     <%= f.label :phaseId %><br />
     <%= f.number_field :phaseId %>
