--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -11,7 +11,7 @@
 </p>
 
 <b>Attached Portfolio Process</b>
-<%if @portfolio.portfolio_process.count()>  0%>
+<%if !@portfolio.portfolio_process.nil?%>
     <%=@portfolio.portfolio_process.title%><br>
     <%@portfolio.portfolio_process.phases.each do |p|%>
         <li><%=p.title%></li>
